--- a/packages/vuetify/src/components/VSelect/VSelect.sass
+++ b/packages/vuetify/src/components/VSelect/VSelect.sass
@@ -27,11 +27,6 @@
         transition: none
         pointer-events: none
 
-    .v-field__append-inner
-      > .v-icon
-        margin-inline-start: 4px
-        transition: $select-transition
-
   .v-field--dirty
     .v-select__selection
       margin-inline-end: 2px
@@ -54,12 +49,6 @@
     line-height: inherit
     max-width: 100%
 
-  &--active-menu
-    .v-field__append-inner
-      > .v-icon
-        opacity: var(--v-high-emphasis-opacity)
-        transform: rotate(180deg)
-
   &--chips
     .v-select__selection
       margin-top: $select-chips-margin-top
@@ -74,3 +63,10 @@
         > input
           opacity: 0
 
+  &__menu-icon
+    margin-inline-start: 4px
+    transition: $select-transition
+
+    .v-select--active-menu &
+      opacity: var(--v-high-emphasis-opacity)
+      transform: rotate(180deg)
