refactor(VDatePicker): normalize month/years height

--- a/packages/vuetify/src/labs/VDatePicker/VDatePickerMonth.sass
+++ b/packages/vuetify/src/labs/VDatePicker/VDatePickerMonth.sass
@@ -1,6 +1,7 @@
 .v-date-picker-month
   display: flex
   justify-content: center
+  height: 268px
   min-width: 328px
 
   --v-date-picker-month-day-diff: 4px
