--- a/packages/vuetify/src/labs/VDatePicker/VDatePickerControls.sass
+++ b/packages/vuetify/src/labs/VDatePicker/VDatePickerControls.sass
@@ -4,12 +4,12 @@
   justify-content: space-between
   font-size: .875rem
   padding-inline-start: 24px
-  // padding-top: 4px
-  // padding-bottom: 4px
+  padding-top: 4px
+  padding-bottom: 4px
   padding-inline-end: 12px
 
   .v-btn:last-child
-    margin-left: 24px
+    margin-left: 4px
 
 .v-date-picker-controls__date
   margin-right: 4px
