fix(VPicker): remove legacy sass imports
fixes #17603

--- a/packages/vuetify/src/labs/VPicker/_variables.scss
+++ b/packages/vuetify/src/labs/VPicker/_variables.scss
@@ -1,6 +1,6 @@
-@import '../../styles/styles.sass';
+@use '../../styles/settings';
 
-$picker-border-radius: $border-radius-root !default;
+$picker-border-radius: settings.$border-radius-root !default;
 $picker-title-padding: 16px !default;
 $picker-inactive-btn-opacity: .6 !default;
 $picker-active-btn-opacity: 1 !default;
