--- a/packages/vuetify/src/components/VAutocomplete/VAutocomplete.sass
+++ b/packages/vuetify/src/components/VAutocomplete/VAutocomplete.sass
@@ -44,11 +44,11 @@
 
   &__selection
     display: inline-flex
+    align-items: center
     letter-spacing: inherit
     line-height: inherit
     max-width: 100%
 
-  input,
   &__selection
     margin-top: var(--v-input-chips-margin-top)
     margin-bottom: var(--v-input-chips-margin-bottom)
@@ -75,6 +75,11 @@
       width: 100%
       padding-inline-start: inherit
       padding-inline-end: inherit
+
+    .v-field--variant-outlined
+      input
+        top: calc(50% - var(--v-input-chips-margin-top))
+        transform: translateY(-50%)
 
     .v-field--active
       input
