--- a/packages/vuetify/src/components/VSelect/VSelect.sass
+++ b/packages/vuetify/src/components/VSelect/VSelect.sass
@@ -41,18 +41,17 @@
 
   &__selection
     display: inline-flex
+    align-items: center
     letter-spacing: inherit
     line-height: inherit
     max-width: 100%
 
-  &--chips,
-  &--selection-slot
-    .v-select__selection
-      margin-top: var(--v-input-chips-margin-top)
-      margin-bottom: var(--v-input-chips-margin-bottom)
+  .v-select__selection
+    margin-top: var(--v-input-chips-margin-top)
+    margin-bottom: var(--v-input-chips-margin-bottom)
 
-      &:first-child
-        margin-inline-start: 0
+    &:first-child
+      margin-inline-start: 0
 
   &--selected
     .v-field
