fix(VTextField): align prefix/suffix with input and chips (#17727)
fixes #17719

--- a/packages/vuetify/src/components/VField/VField.sass
+++ b/packages/vuetify/src/components/VField/VField.sass
@@ -127,14 +127,13 @@
   flex-wrap: wrap
   letter-spacing: $field-letter-spacing
   opacity: $field-input-opacity
-  min-height: calc(var(--v-field-input-min-height) + var(--v-input-chips-margin-bottom) + $input-chips-margin-top)
+  min-height: $field-input-min-height
   padding-inline-start: var(--v-field-padding-start)
   padding-inline-end: var(--v-field-padding-end)
   padding-top: var(--v-field-input-padding-top)
   padding-bottom: var(--v-field-input-padding-bottom)
   position: relative 
   width: 100%
-  --v-field-input-min-height: #{$field-input-min-height}
 
   input
     letter-spacing: inherit
