fix(VField): prevent input dom overflow v-field__input (#17753)
fixes #17740

--- a/packages/vuetify/src/components/VField/VField.sass
+++ b/packages/vuetify/src/components/VField/VField.sass
@@ -128,6 +128,7 @@
   letter-spacing: $field-letter-spacing
   opacity: $field-input-opacity
   min-height: $field-input-min-height
+  min-width: 0
   padding-inline-start: var(--v-field-padding-start)
   padding-inline-end: var(--v-field-padding-end)
   padding-top: var(--v-field-input-padding-top)
