--- a/packages/vuetify/src/components/VField/VField.sass
+++ b/packages/vuetify/src/components/VField/VField.sass
@@ -4,7 +4,6 @@
 @use '../../styles/settings'
 @use '../../styles/tools'
 @use './variables' as *
-@use './mixins' as *
 
 /* region INPUT */
 .v-field
@@ -69,9 +68,9 @@
     $root: &
 
     @at-root
-      @include input-density('v-input', $input-density, $input-chips-margin-bottom) using ($modifier, $chips-modifier)
+      @include tools.density('v-input', $input-density) using ($modifier)
         @at-root #{selector.nest(&, $root)}
-          --v-input-control-height: #{$field-control-height + $modifier - math.div($chips-modifier, 2) - $input-chips-margin-top}
+          --v-input-control-height: #{$field-control-height + $modifier}
           --v-field-padding-bottom: #{math.max(0px, $field-control-padding-bottom + $modifier * .5)}
 
   &--variant-outlined,
@@ -97,13 +96,10 @@
       --v-field-padding-top: var(--v-field-padding-top--plain-underlined, 6px)
 
     @at-root
-      @include input-density('v-input', $input-density, $input-chips-margin-bottom) using ($modifier, $chips-modifier)
+      @include tools.density('v-input', $input-density) using ($modifier)
         @at-root #{selector.nest(&, $root)}
-          --v-input-control-height: #{$field-control-underlined-height + $modifier - math.div($chips-modifier, 2) - $input-chips-margin-top}
+          --v-input-control-height: #{$field-control-underlined-height + $modifier}
           --v-field-padding-bottom: #{math.max(0px, $field-control-padding-bottom + $modifier * .5)}
-
-  &--variant-outlined
-    --v-input-chips-margin-bottom: #{$input-chips-margin-top}
 
   &--flat
     box-shadow: none
