fix(VSelect): support browser autofill
fixes #5936

--- a/packages/vuetify/src/components/VSelect/VSelect.sass
+++ b/packages/vuetify/src/components/VSelect/VSelect.sass
@@ -22,6 +22,7 @@
         width: 100%
         transition: none
         pointer-events: none
+        caret-color: transparent
 
   .v-field--dirty
     .v-select__selection
