fix(VDatePicker): add missing body padding

--- a/packages/vuetify/src/labs/VDatePicker/VDatePicker.sass
+++ b/packages/vuetify/src/labs/VDatePicker/VDatePicker.sass
@@ -8,14 +8,13 @@
 .v-date-picker
   overflow: hidden
 
-  .v-date-picker-month
-    padding-inline-start: 12px
-    padding-inline-end: 12px
+.v-date-picker-month
+  padding: 0 12px 12px
 
-    .v-date-picker-month__day
-      height: 48px
-      width: 48px
+.v-date-picker-month__day
+  height: 48px
+  width: 48px
 
-      .v-btn
-        --v-btn-height: 28px
-        --v-btn-size: 0.85rem
+  .v-btn
+    --v-btn-height: 28px
+    --v-btn-size: 0.85rem
