fix(VField): reset underline border color
fixes #17964

--- a/packages/vuetify/src/components/VField/VField.sass
+++ b/packages/vuetify/src/components/VField/VField.sass
@@ -325,6 +325,7 @@
   .v-field--variant-filled &,
   .v-field--variant-underlined &
     &::before
+      border-color: currentColor
       border-style: solid
       border-width: 0 0 var(--v-field-border-width)
       opacity: var(--v-field-border-opacity)
