fix(VBtn): override hover effect for disable state (#17912)
fixes #17228

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -83,6 +83,8 @@
 
     @if ($button-colored-disabled)
       opacity: $button-disabled-opacity
+      &:hover
+        opacity: $button-disabled-opacity
     @else
       opacity: 1
       &.v-btn
