--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -148,6 +148,9 @@
   &--rounded
     @include tools.rounded($button-rounded-border-radius)
 
+    &.v-btn--icon
+      @include tools.rounded($button-border-radius)
+
   .v-icon
     --v-icon-size-multiplier: #{calc(18/21)}
 
