fix(VListItem): apply prepend/append badge margin correctly
the nested selectors for margin-inline-start/end were an
accident

--- a/packages/vuetify/src/components/VList/VListItem.sass
+++ b/packages/vuetify/src/components/VList/VListItem.sass
@@ -67,7 +67,7 @@
   > .v-avatar
     margin-inline-end: $list-item-avatar-margin-end
 
-  > .v-badge .v-icon,
+  > .v-badge,
   > .v-icon
     margin-inline-end: $list-item-icon-margin-end
 
@@ -83,7 +83,7 @@
   > .v-avatar
     margin-inline-start: $list-item-avatar-margin-start
 
-  > .v-badge .v-icon,
+  > .v-badge,
   > .v-icon
     margin-inline-start: $list-item-icon-margin-start
 
