--- a/packages/vuetify/src/components/VFileInput/VFileInput.sass
+++ b/packages/vuetify/src/components/VFileInput/VFileInput.sass
@@ -12,7 +12,11 @@
     top: 0
     width: 100%
     z-index: 1
- 
+
+  .v-input__details
+    padding-inline-start: $file-input-details-padding-inline
+    padding-inline-end: $file-input-details-padding-inline
+
   .v-chip
     margin-top: var(--v-input-chips-margin-top)
     margin-bottom: var(--v-input-chips-margin-bottom)
