--- a/packages/vuetify/src/components/VList/VList.sass
+++ b/packages/vuetify/src/components/VList/VList.sass
@@ -21,7 +21,7 @@
     padding-inline-start: $list-nav-padding
     padding-inline-end: $list-nav-padding
 
-  .v-navigation-drawer--rail:not(.v-navigation-drawer--is-hovering) &
+  .v-navigation-drawer--rail:not(.v-navigation-drawer--is-hovering.v-navigation-drawer--expand-on-hover) &
     .v-avatar
       --v-avatar-height: 24px
 
