fix(VTimeline): horizontal timeline gap (#18022)

--- a/packages/vuetify/src/components/VTimeline/VTimeline.sass
+++ b/packages/vuetify/src/components/VTimeline/VTimeline.sass
@@ -19,13 +19,18 @@
   position: relative
 
   @include horizontal(true)
-    grid-column-gap: $timeline-item-padding
     width: 100%
 
     @include timeline-first-item()
       padding-inline-start: $timeline-item-padding
 
     @include timeline-last-item()
+      padding-inline-end: $timeline-item-padding
+
+    .v-timeline-item__body
+      padding-inline-end: $timeline-item-padding
+
+    .v-timeline-item__opposite
       padding-inline-end: $timeline-item-padding
 
     .v-timeline-item:nth-child(2n)
